--- a/style/global.css
+++ b/style/global.css
@@ -9,13 +9,7 @@ html {
 
 }
 
-.HomePageHomeContainer{
-    margin: -1vh;
-    padding: 0;
-    font-family:Arial, Helvetica, sans-serif;
-    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-}
+
 
 h1 {
     display: block;
@@ -30,11 +24,13 @@ h1 {
 
 
 .HomePageHeader{
+    margin: -1vh;
     display: flex;
     background-color: var(--black);
     height: 90px;
     align-items: center;
     justify-content:space-between;
+    box-shadow: 3px 3px 6px 1px rgb(0 0 0 / 50%);
    
  
 }
@@ -53,12 +49,13 @@ h1 {
     height: 60px;
     border-radius: 10px;
     margin-left: 20px;
+    box-shadow: 3px 3px 6px 1px rgb(0 0 0 / 50%);
 }
 
 
 
 
-.HomePageHeader h1{
+.titleHeader h1{
 
 color: var(--TextBoxWhite);
 
@@ -89,7 +86,7 @@ color: var(--TextBoxWhite);
 .usersHeader .iconUser{
     display: flex;
     width: 200px;
-    
+    color: #ffffff;
     
 }
 
@@ -97,6 +94,7 @@ color: var(--TextBoxWhite);
     display: flex;
     width: 20%;
     margin-right: 20px;
+    
 }
 
 .HomePageHeader .searchHeader input{
@@ -105,6 +103,7 @@ color: var(--TextBoxWhite);
     height: 35px;
     width: 100%;
     background-color: var(--TextBoxWhite);
+    box-shadow: 3px 3px 6px 1px rgb(0 0 0 / 50%);
     
 }
 
