--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,7 @@ h1 {
     margin-inline-end: 0px;
     margin: 0;
     font-weight: bold;
+    
 }
 
 
@@ -121,3 +122,6 @@ color: var(--TextBoxWhite);
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
 
+.footer{
+    border-top: 1px solid black;
+}
