--- a/styles/global.css
+++ b/styles/global.css
@@ -1,127 +1,66 @@
-html {
-	--black: #212529;
-	--gray: #eaeaea;
-    --TextBoxWhite: #ffffff;
-    --TextBoxBlack: #ffffff;
-    --blue: #00bfff;
-    scroll-behavior: smooth;
-    background-color: var(--gray);
+html{
+    --fundo: rgba(6, 8, 6, 0.075);
+}
+
+@font-face {
+    font-family: 'FredokaOne';
+    src: url('./FredokaOne-Regular.ttf') format('truetype');
 
 }
 
-
-
-h1 {
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    margin: 0;
-    font-weight: bold;
+body{
+    font-family: 'FredokaOne';
+    overflow-x:hidden;
+    overflow-y: scroll;
+    background-color: var(--fundo);
     
 }
 
 
-.HomePageHeader{
-    margin: -1vh;
+button, a:hover{
+    cursor:pointer;
+}
+
+.header{
+    position: absolute;
+    top: 0;
     display: flex;
-    background-color: var(--black);
-    height: 90px;
-    align-items: center;
-    justify-content:space-between;
-    box-shadow: 3px 3px 6px 1px rgb(0 0 0 / 50%);
-   
- 
-}
-
-.logosHeader{
-    display: flex;
-    width: 20%;
-    
-}
-
-.HomePageHeader .logo{
-    display: flex;
-    border: 1px solid #ffffff;
-    background-color: #ffffff;
-    width: 80px;
-    height: 60px;
-    border-radius: 10px;
-    margin-left: 20px;
-    box-shadow: 3px 3px 6px 1px rgb(0 0 0 / 50%);
-}
-
-
-
-
-.titleHeader h1{
-
-color: var(--TextBoxWhite);
-
-}
-
-.linksHeader{
-    display: flex;
-    width: 20%;
-    
-}
-
-.linksHeader > a{
-    color: var(--TextBoxWhite);
-    margin-right: 20px;
-    text-decoration: none;
-}
-
-.titleHeader{
-    display: flex;
-    width: 20%;
-}
-
-.usersHeader{
-    display: flex;
-    width: 20%;
-}
-
-.usersHeader .iconUser{
-    display: flex;
-    width: 200px;
-    color: #ffffff;
-    
-}
-
-.HomePageHeader .searchHeader{
-    display: flex;
-    width: 20%;
-    margin-right: 20px;
-    
-}
-
-.HomePageHeader .searchHeader input{
-    display: flex;
-    border-radius: 6px;
-    height: 35px;
+    flex-direction: row;
+    height: 100px;
     width: 100%;
-    background-color: var(--TextBoxWhite);
-    box-shadow: 3px 3px 6px 1px rgb(0 0 0 / 50%);
+    justify-content:space-between;
+   
+}
+
+.logo{
+    display: flex;
+    flex-direction: row;
+    height: 80%;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.logo img{
+    display: flex;
+    margin-left: 5vh;
+}
+
+.logo > h1{
+    display: flex;
+    align-items: flex-end;
+    height: 85%;
+}
+
+.links{
+    display: flex;
+    width: 40%;
+    
+    justify-content: space-evenly;
+    align-items: center;
     
 }
 
-.HomePageHeader .searchHeader .buttonSearch{
-    display: flex;
-    justify-content: center;
-    margin-left: 20px;
-    border-radius: 10px;
-    text-align: center;
-    align-items: center;
-    width: 80px;
-    color: var(--TextBoxWhite);
-    background-color: var(--blue);
-    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+.links{
+    color: #fff;
 }
 
-.footer{
-    border-top: 1px solid black;
-}
