--- a/pages/LadingPage/style.css
+++ b/pages/LadingPage/style.css
@@ -84,3 +84,18 @@ box-shadow: 0px 10px 13px -7px #000000, 3px 4px 12px 3px rgba(0,0,0,0.33);
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 3px 4px 12px 3px rgba(0,0,0,0.33); 
     box-shadow: 0px 10px 13px -7px #000000, 3px 4px 12px 3px rgba(0,0,0,0.33);
 }
+
+#more {display: none;}
+
+
+
+/* Mudando a cor ao passar o mouse na imagem
+ */
+.img-fluid {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .img-fluid:hover {opacity: 0.7;}
+  
